fix invalid reference to index.js

--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
 	<script src="js/lib/ConvexGeometry.js"></script>
 
 	<!--src -->
-	<script src="js/src/index.js.js"></script>
+	<script src="js/src/index.js"></script>
 
 	</body>
 </html>
