--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,7 @@
 	<script src="js/lib/ConvexObjectBreaker.js"></script>
 	<script src="js/lib/QuickHull.js"></script>
 	<script src="js/lib/ConvexGeometry.js"></script>
+	<script src="js/lib/STLLoader.js"></script>
 
 	<!--src -->
 	<script src="js/src/index.js"></script>
