--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 	<head>
-		<title>Convex object breaking example</title>
+		<title>Mjolnir Simulator</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
@@ -29,7 +29,7 @@
 	</head>
 	<body>
 
-	<div id="info">Physics threejs demo with convex objects breaking in real time<br />Press mouse to throw balls and move the camera.</div>
+	<div id="info">Press mouse to throw hammer</div>
 	<div id="container"><br /><br /><br /><br /><br />Loading...</div>
 
 	<!--libs -->
@@ -44,6 +44,8 @@
 	<script src="js/lib/STLLoader.js"></script>
 
 	<!--src -->
+	<script src="js/src/gameObject.js"></script>
+	<script src="js/src/handleInput.js"></script>
 	<script src="js/src/index.js"></script>
 
 	</body>
