extract css onto its own file

--- a/client/index.html
+++ b/client/index.html
@@ -3,33 +3,14 @@
 		<title>Mjolnir Simulator</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<style>
-			body {
-				color: #61443e;
-				font-family:Monospace;
-				font-size:13px;
-				text-align:center;
-
-				background-color: #bfd1e5;
-				margin: 0px;
-				overflow: hidden;
-			}
-
-			#info {
-				position: absolute;
-				top: 0px; width: 100%;
-				padding: 5px;
-			}
-
-			a {
-				color: #a06851;
-			}
-
-		</style>
+		<link rel="stylesheet" href="css/index.css">
 	</head>
 	<body>
 
 	<div id="info">Press mouse to throw hammer</div>
+	<div class="score-board">
+		Points:<span>0</span>
+	</div>
 	<div id="container"><br /><br /><br /><br /><br />Loading...</div>
 
 	<!--libs -->
