Setting Up Websocket Server
- Establishes Websocket server and client
- Client attempts to reconnect upon disconnect
- Server submitts randomly generated coordinates for hammer generation
- Client socket decodes and emitts data to input handler

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
 	<!--src -->
 	<script src="js/src/gameObject.js"></script>
 	<script src="js/src/handleInput.js"></script>
+	<script src="js/src/wsClient.js"></script>
 	<script src="js/src/index.js"></script>
 
 	</body>
