--- a/client/index.html
+++ b/client/index.html
@@ -30,5 +30,33 @@
 	<script src="js/src/wsClient.js"></script>
 	<script src="js/src/index.js"></script>
 
+	<video autoplay id="vid" style="display:none;" height="720" width="1280"></video>
+    
+        <div>
+            <canvas id="canvas" width="320" height="240" style="display:none;"></canvas>
+            <canvas id="canvas2" width="320" height="240" style="display:none;"></canvas>
+		</div>
+		
+		<script src="js/webcamMotion.js" type="text/javascript"></script>
+		<script>
+		   
+			var webcamConfig = { video: "#vid", canvas1: "#canvas", canvas2: "#canvas2", fps: 30 };
+			console.log('ready');
+			var webcamMotion = new WebCamMotion(webcamConfig, function (x, y) {
+				console.log({ x: x, y: y });
+				var velocity = 35 // TODO: Temporary value for testing
+
+    var inputValues = {
+        x: x*6,
+        y: y*4.5,
+        velocity: velocity
+    };
+
+    var event = new CustomEvent('generateHammer', { detail: {inputValues: inputValues} });
+    window.dispatchEvent(event);
+			});
+
+		
+		</script>
 	</body>
 </html>
