--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,16 @@
 	</head>
 	<body>
 
-	<div id="info">Press mouse to throw hammer</div>
+	<div id="info">
+		<label>
+			Mouse
+			<input type="radio" name="hammerSource" value="mouse">
+		</label>
+		<label>
+			WebCam
+			<input type="radio" name="hammerSource" value="webcam" checked>
+		</label>
+	</div>
 	<div class="score-board">
 		Points:<span>0</span>
 	</div>
@@ -24,39 +33,19 @@
 	<script src="js/lib/ConvexGeometry.js"></script>
 	<script src="js/lib/STLLoader.js"></script>
 
+	<video autoplay id="vid" style="display:none;" height="720" width="1280"></video>
+    <div>
+        <canvas id="canvas" width="320" height="240" style="display:none;"></canvas>
+        <canvas id="canvas2" width="320" height="240" style="display:none;"></canvas>
+	</div>
+
+
 	<!--src -->
 	<script src="js/src/gameObject.js"></script>
+	<script src="js/src/webcamMotion.js" type="text/javascript"></script>
 	<script src="js/src/handleInput.js"></script>
 	<script src="js/src/wsClient.js"></script>
 	<script src="js/src/index.js"></script>
 
-	<video autoplay id="vid" style="display:none;" height="720" width="1280"></video>
-    
-        <div>
-            <canvas id="canvas" width="320" height="240" style="display:none;"></canvas>
-            <canvas id="canvas2" width="320" height="240" style="display:none;"></canvas>
-		</div>
-		
-		<script src="js/webcamMotion.js" type="text/javascript"></script>
-		<script>
-		   
-			var webcamConfig = { video: "#vid", canvas1: "#canvas", canvas2: "#canvas2", fps: 30 };
-			console.log('ready');
-			var webcamMotion = new WebCamMotion(webcamConfig, function (x, y) {
-				console.log({ x: x, y: y });
-				var velocity = 35 // TODO: Temporary value for testing
-
-    var inputValues = {
-        x: x*6,
-        y: y*4.5,
-        velocity: velocity
-    };
-
-    var event = new CustomEvent('generateHammer', { detail: {inputValues: inputValues} });
-    window.dispatchEvent(event);
-			});
-
-		
-		</script>
 	</body>
 </html>
