--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,10 @@
 	<body>
 
 	<div id="info">Press mouse to throw hammer</div>
+	<div class="level-link-container">
+		<a class="level-link" href="#"  data-level="0">0</a>
+		<a class="level-link" href="#" data-level="1">1</a>
+	</div>
 	<div class="score-board">
 		Points:<span>0</span>
 	</div>
@@ -31,15 +35,15 @@
 	<script src="js/src/index.js"></script>
 
 	<video autoplay id="vid" style="display:none;" height="720" width="1280"></video>
-    
+
         <div>
             <canvas id="canvas" width="320" height="240" style="display:none;"></canvas>
             <canvas id="canvas2" width="320" height="240" style="display:none;"></canvas>
 		</div>
-		
+
 		<script src="js/webcamMotion.js" type="text/javascript"></script>
 		<script>
-		   
+
 			var webcamConfig = { video: "#vid", canvas1: "#canvas", canvas2: "#canvas2", fps: 30 };
 			console.log('ready');
 			var webcamMotion = new WebCamMotion(webcamConfig, function (x, y) {
@@ -56,7 +60,7 @@
     window.dispatchEvent(event);
 			});
 
-		
+
 		</script>
 	</body>
 </html>
