add_hit_score: adding hit score to get individual hit score

--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,11 @@
 		<a class="level-link" href="#"  data-level="0">0</a>
 		<a class="level-link" href="#" data-level="1">1</a>
 	</div>
+	<div class="hit_score">
+		Hit Points:<span>0</span>
+	</div>
 	<div class="score-board">
-		Points:<span>0</span>
+		Total Points:<span>0</span>
 	</div>
 	<div id="container"><br /><br /><br /><br /><br />Loading...</div>
 
