--- a/client/index.html
+++ b/client/index.html
@@ -22,11 +22,10 @@
 		</ul>
 	</form>
 
-	<div id="info">Press mouse to throw hammer</div>
-	<div class="level-link-container">
-		<a class="level-link" href="#" data-level="0">0</a>
-		<a class="level-link" href="#" data-level="1">1</a>
-	</div>
+	<ul class="level-link-container">
+		<li><a class="level-link" href="#" data-level="0">0</a></li>
+		<li><a class="level-link" href="#" data-level="1">1</a></li>
+	</ul>
 
 	<div class="score-board">
 		Points:<span>0</span>
@@ -50,7 +49,6 @@
 		<canvas id="canvas2" width="320" height="240" style="display:none;"></canvas>
 	</div>
 
-
 	<!--src -->
 	<script src="js/src/gameObject.js"></script>
 	<script src="js/src/webcamMotion.js" type="text/javascript"></script>
@@ -58,37 +56,6 @@
 	<script src="js/src/wsClient.js"></script>
 	<script src="js/src/index.js"></script>
 
-	<<<<<<< HEAD <video autoplay id="vid" style="display:none;" height="720" width="1280">
-		</video>
-
-		<div>
-			<canvas id="canvas" width="320" height="240" style="display:none;"></canvas>
-			<canvas id="canvas2" width="320" height="240" style="display:none;"></canvas>
-		</div>
-
-		<script src="js/webcamMotion.js" type="text/javascript"></script>
-		<script>
-			var webcamConfig = { video: "#vid", canvas1: "#canvas", canvas2: "#canvas2", fps: 30 };
-			console.log('ready');
-			var webcamMotion = new WebCamMotion(webcamConfig, function (x, y) {
-				console.log({ x: x, y: y });
-				var velocity = 35 // TODO: Temporary value for testing
-
-				var inputValues = {
-					x: x * 6,
-					y: y * 4.5,
-					velocity: velocity
-				};
-
-				var event = new CustomEvent('generateHammer', { detail: { inputValues: inputValues } });
-				window.dispatchEvent(event);
-			});
-		</script>
 </body>
 
 </html>
-=======
-</body>
-
-</html>
->>>>>>> ab42e1efa5bfe54d9b48fd6adc9581a4051e3233
