--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,11 @@
 		</ul>
 	</form>
 
+	<ul class="level-link-container">
+		<li><a class="level-link" href="#" data-level="0">0</a></li>
+		<li><a class="level-link" href="#" data-level="1">1</a></li>
+	</ul>
+
 	<div class="score-board">
 		Points:<span>0</span>
 	</div>
@@ -43,7 +48,6 @@
 		<canvas id="canvas" width="320" height="240" style="display:none;"></canvas>
 		<canvas id="canvas2" width="320" height="240" style="display:none;"></canvas>
 	</div>
-
 
 	<!--src -->
 	<script src="js/src/gameObject.js"></script>
