--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
     <ul class="level-link-container">
         <li><a class="level-link" href="#" data-level="0">0</a></li>
         <li><a class="level-link" href="#" data-level="1">1</a></li>
+        <li><a class="reset-button" onclick="resetGame()">Reset</a></li>
     </ul>
 
     <div class="score-board">
