Add hit score (#39)
* add_hit_score: adding hit score to get individual hit score

* Adding Styling to Score and Data Persistence

* Adding Reset Button

--- a/client/index.html
+++ b/client/index.html
@@ -1,60 +1,67 @@
 <html lang="en">
 
 <head>
-	<title>Mjolnir Simulator</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-	<link rel="stylesheet" href="css/index.css">
+    <title>Mjolnir Simulator</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
 
-	<form>
-		<ul class="info">
-			<li class="left">
-				<input class="btn" type="radio" id="toggle-on" name="hammerSource" value="mouse" checked>
-				<label for="toggle-on">Mouse</label>
-			</li>
-			<li class="right">
-				<input class="btn" type="radio" id="toggle-off" name="hammerSource" value="webcam">
-				<label for="toggle-off">WebCam</label>
-			</li>
-		</ul>
-	</form>
+    <form>
+        <ul class="info">
+            <li class="left">
+                <input class="btn" type="radio" id="toggle-on" name="hammerSource" value="mouse" checked>
+                <label for="toggle-on">Mouse</label>
+            </li>
+            <li class="right">
+                <input class="btn" type="radio" id="toggle-off" name="hammerSource" value="webcam">
+                <label for="toggle-off">WebCam</label>
+            </li>
+        </ul>
+    </form>
 
-	<ul class="level-link-container">
-		<li><a class="level-link" href="#" data-level="0">0</a></li>
-		<li><a class="level-link" href="#" data-level="1">1</a></li>
-	</ul>
+    <ul class="level-link-container">
+        <li><a class="level-link" href="#" data-level="0">0</a></li>
+        <li><a class="level-link" href="#" data-level="1">1</a></li>
+        <li><a class="reset-button" onclick="resetGame()">Reset</a></li>
+    </ul>
 
-	<div class="score-board">
-		Points:<span>0</span>
-	</div>
-	<div id="container"><br /><br /><br /><br /><br />Loading...</div>
+    <div class="score-board">
+        <div class="total-score">
+            <span>0</span>
+        </div>
+        <div class="hit-score">
+            <span>0</span>
+        </div>
+    </div>
 
-	<!--libs -->
-	<script src="js/lib/three.js"></script>
-	<script src="js/lib/ammo.js"></script>
-	<script src="js/lib/OrbitControls.js"></script>
-	<script src="js/lib/Detector.js"></script>
-	<script src="js/lib/stats.min.js"></script>
-	<script src="js/lib/ConvexObjectBreaker.js"></script>
-	<script src="js/lib/QuickHull.js"></script>
-	<script src="js/lib/ConvexGeometry.js"></script>
-	<script src="js/lib/STLLoader.js"></script>
+    <div id="container"><br /><br /><br /><br /><br />Loading...</div>
 
-	<video autoplay id="vid" style="display:none;" height="720" width="1280"></video>
-	<div>
-		<canvas id="canvas" width="320" height="240" style="display:none;"></canvas>
-		<canvas id="canvas2" width="320" height="240" style="display:none;"></canvas>
-	</div>
+    <!--libs -->
+    <script src="js/lib/three.js"></script>
+    <script src="js/lib/ammo.js"></script>
+    <script src="js/lib/OrbitControls.js"></script>
+    <script src="js/lib/Detector.js"></script>
+    <script src="js/lib/stats.min.js"></script>
+    <script src="js/lib/ConvexObjectBreaker.js"></script>
+    <script src="js/lib/QuickHull.js"></script>
+    <script src="js/lib/ConvexGeometry.js"></script>
+    <script src="js/lib/STLLoader.js"></script>
 
-	<!--src -->
-	<script src="js/src/gameObject.js"></script>
-	<script src="js/src/webcamMotion.js" type="text/javascript"></script>
-	<script src="js/src/handleInput.js"></script>
-	<script src="js/src/wsClient.js"></script>
-	<script src="js/src/index.js"></script>
+    <video autoplay id="vid" style="display:none;" height="720" width="1280"></video>
+    <div>
+        <canvas id="canvas" width="320" height="240" style="display:none;"></canvas>
+        <canvas id="canvas2" width="320" height="240" style="display:none;"></canvas>
+    </div>
+
+    <!--src -->
+    <script src="js/src/gameObject.js"></script>
+    <script src="js/src/webcamMotion.js" type="text/javascript"></script>
+    <script src="js/src/handleInput.js"></script>
+    <script src="js/src/wsClient.js"></script>
+    <script src="js/src/index.js"></script>
 
 </body>
 
