Making Levels Modular
- Added levels 1, 2, and 3

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
     <ul class="level-link-container">
         <li><a class="level-link" href="#" data-level="1">1</a></li>
         <li><a class="level-link" href="#" data-level="2">2</a></li>
+        <li><a class="level-link" href="#" data-level="3">3</a></li>
         <li><a class="reset-button" onclick="resetGame()">Reset</a></li>
     </ul>
 
@@ -61,8 +62,12 @@
     <script src="js/src/webcamMotion.js" type="text/javascript"></script>
     <script src="js/src/handleInput.js"></script>
     <script src="js/src/wsClient.js"></script>
-    <script src="js/src/index.js"></script>
 
+    <script src="js/src/levels/level1.js"></script>
+    <script src="js/src/levels/level2.js"></script>
+    <script src="js/src/levels/level3.js"></script>
+
+    <script src="js/src/index.js"></script>
 </body>
 
 </html>
