fixed accuracy on the scaling

--- a/client/game.html
+++ b/client/game.html
@@ -51,10 +51,10 @@
     <script src="js/lib/ConvexGeometry.js"></script>
     <script src="js/lib/STLLoader.js"></script>
 
-    <video autoplay id="vid" style="display:none;" height="720" width="1280"></video>
+    <video autoplay id="vid" style="display:none;" width="320" height="240"></video>
+    
     <div>
-        <canvas id="canvas" width="320" height="240" style="display:none;"></canvas>
-        <canvas id="canvas2" width="320" height="240" style="display:none;"></canvas>
+        <canvas id="canvas" width="320" height="240" style="position:fixed;bottom:0;left: 0;"></canvas>
     </div>
 
     <!--src -->
